[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/enemy/enemy2.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 14.2783

[sub_resource type="CircleShape2D" id=2]
radius = 14.4809

[sub_resource type="Animation" id=3]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 1, 0.0392157, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BounceTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HitboxArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 3 )

[node name="SlowTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="BounceTimer" to="." method="_on_BounceTimer_timeout"]
[connection signal="area_entered" from="HitboxArea" to="." method="_on_HitboxArea_area_entered"]
[connection signal="timeout" from="SlowTimer" to="." method="_on_SlowTimer_timeout"]
